--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expense-management-system",
+  "name": "Expense-Monitor-System",
   "version": "1.0.0",
-  "description": "",
+  "description": "CashFowMonitor",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
