--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "colors": "^1.4.0",
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "rxjs": "^7.8.1",
+    "shell-quote": "^1.8.1"
   }
 }
